samples/_failures_safe/1761626346_57c49a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_880d8e87.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_880d8e87.c:152:20: error: missing terminating " character
  152 |             printf("Vertex %
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_880d8e87.c:152:13: error: expected expression at end of input
  152 |             printf("Vertex %
      |             ^~~~~~
./samples/SAFE/__tmp_880d8e87.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_880d8e87.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_880d8e87.c:152:13: error: expected declaration or statement at end of input
